# data_utils

./: CLAUDE.md  pyproject.toml
data_utils/: __init__.py  correct_gt_with_st.py  create_csv.py  create_man_track.py  create_zarr.py  extract_data.py  extract_frames.py  image_utils.py  load_csv_data.py  load_csv_edge_attribute.py  load_csv_node_attribute.py  load_tracklet_csv_data.py  load_tracklet_csv_node_attribute.py  save_tracklet_csv_data.py  split_data.py  split_indices.py
tests/: test_extract_data.py  test_split_data.py
